2007-12-17  Mark Ellis  <mark@mpellis.org.uk>

	* more registry fixes in rapi1
	* added CeRegDeleteKey() and CeRegDeleteValue() to rapi 1
	
2007-12-13  Mark Ellis  <mark@mpellis.org.uk>

	* fixes to rapi_buffer_debug_ header
	* fixes to CeRegQueryInfoKey & CeRegEnumValue in rapi1
	* improved NULL handling in rapi2 from Guido Diepen
	* extra functionality in synce-registry from Guido Diepen

2007-12-06  Mark Ellis  <mark@mpellis.org.uk>

	* patch from Guido Diepen, many thanks !!
	* added CeRegQueryInfoKey and CeRegEnumValue2 to rapi2
	* fix to rapi_buffer_read_string
	* new debuging functions

2007-11-28  Mark Ellis  <mark@mpellis.org.uk>

	* pls.c and pcp.1 patch from Debian package

2007-09-18  Mark Ellis  <mark@mpellis.org.uk>

	* started Changelog !
	* changed rapi_connection_from_path to rapi_connection_from_name
